--- a/cms/templates/home_page.html
+++ b/cms/templates/home_page.html
@@ -43,56 +43,41 @@
 {% endif %}
 {% if show_new_featured_carousel %}
   <div class="featured-product-section-container d-flex flex-column container">
-    <div class="featured-product-section d-flex row carousel slide" id="featuredProductCarousel">
-      <div class="featured-product-header d-flex row col-12">
-        {% if product_cards_section_title %}
-          <h3 class="featured-product-header-title col-6">{{ product_cards_section_title }}</h3>
-        {% endif %}
-        <div class="featured-product-arrows col-6">
-          <a href="#featuredProductCarousel" role="button" data-bs-slide="prev">
-            <img class="arrow prev-arrow" src="/static/images/featured-products-left-arrow.svg" alt="Previous Arrow" />
-          </a>
-          <a href="#featuredProductCarousel" role="button" data-bs-slide="next">
-            <img class="arrow next-arrow" src="/static/images/featured-products-right-arrow.svg" alt="Next Arrow" />
-          </a>
-        </div>
-      </div>
-      <div class="featured-product-listing">
-        <div class="carousel-inner" role="listbox">
-          {% for product in products %}
-          <div class="carousel-item{% if forloop.counter == 1 %} active{% endif %} ">
-            <div class="card featured-product-card">
-              <a href="{{ product.url_path }}" class="featured-product-card-link">
-              <div class="featured-product-thumb">
-                <img src="{% feature_img_src product.feature_image %}" alt="" />
-                {% if product.program_type %}
-                  <span class="badge badge-program-type">{{ product.program_type }}</span>
-                {% endif %}
-              </div>
-              <div class="featured-product-info card-body">
-                {% if product.start_date and not product.is_program %}
-                  <p class="date">
-                    Starts {{ product.start_date | date:"F j, Y" }}
-                  </p>
-                {% elif not product.is_program %}
-                  <p class="date">
-                    Start Anytime
-                  </p>
-                {% endif %}
-                <h2 class="featured-product-card-title card-title">
-                    {{ product.title }}
-                </h2>
-              </div>
-              </a>
-            </div>
+    <div class="featured-product-background-section"></div>
+      <div class="featured-product-section d-flex row carousel slide" id="featuredProductCarousel">
+
+        <div class="featured-product-header d-flex row col-12">
+          {% if product_cards_section_title %}
+            <h3 class="featured-product-header-title col-6">{{ product_cards_section_title }}</h3>
+          {% endif %}
+          <div class="featured-product-arrows col-6">
+            <a href="#featuredProductCarousel" role="button" data-bs-slide="prev">
+              <img class="arrow prev-arrow" src="/static/images/featured-products-left-arrow.svg" alt="Previous Arrow" />
+            </a>
+            <a href="#featuredProductCarousel" role="button" data-bs-slide="next">
+              <img class="arrow next-arrow" src="/static/images/featured-products-right-arrow.svg" alt="Next Arrow" />
+            </a>
           </div>
-          {% endfor %}
         </div>
+        <div class="featured-product-listing">
+          <div class="carousel-inner d-flex" role="listbox">
+            <div class="carousel-item active">
+              {% for product in products %}
+                {% include "partials/featured_product_card.html" with product=product %}
+                {% if forloop.last %}
+                  </div>
+                {% elif forloop.counter|divisibleby:5  %}
+                  </div>
+                  <div class="carousel-item">
+                    {% include "partials/featured_product_card.html" with product=product %}
+                {% endif %}
+              {% endfor %}
+            </div>
+        </div>
+        <div class="featured-product-navigation">
+        <a role="button" href="/catalog" class="view-catalog-button">View MITx Online Catalog</a>
       </div>
-      <div class="featured-product-navigation">
-      <a role="button" href="/catalog" class="view-catalog-button">View MITx Online Catalog</a>
-    </div>
-    </div>
+      </div>
   </div>
 {% else %}
   <div class="course-section">
@@ -228,19 +213,6 @@
 {% endblock %}
 {% block scripts %}
 <script>
-let items = document.querySelectorAll('.carousel .carousel-item')
 
-items.forEach((el) => {
-    const minPerSlide = 4
-    let next = el.nextElementSibling
-    for (var i=1; i<minPerSlide; i++) {
-        if (!next) {
-        	next = items[0]
-      	}
-        let cloneChild = next.cloneNode(true)
-        el.appendChild(cloneChild.children[0])
-        next = next.nextElementSibling
-    }
-})
 </script>
 {% endblock %}
