--- a/frontend/public/scss/home-page/home-page-hero.scss
+++ b/frontend/public/scss/home-page/home-page-hero.scss
@@ -5,6 +5,7 @@ body.new-design {
   width: 100%;
   height: 600px;
   background: $home-page-dark-blue;
+  z-index: 9999;
   @include media-breakpoint-down(md) {
     width: 100%;
     height: 470px;
