New design footer css updates

--- a/frontend/public/scss/footer.scss
+++ b/frontend/public/scss/footer.scss
@@ -15,7 +15,7 @@
 
     @include media-breakpoint-down(md) {
        flex-direction: column-reverse;
-       padding-left: 5px;
+       padding-left: 10px;
     }
   }
 
@@ -35,15 +35,23 @@
          flex-direction: column;
         }
 
-      @media (min-width: 768px) {
-        padding-left:70px
+      @include media-breakpoint-between(sm, md) {
+         padding-left: 0;
+      }
+
+      @include media-breakpoint-only(md) {
+        padding: 30px 0 30px 30px;
+      }
+
+      @include media-breakpoint-between(lg, xl) {
+        padding-left:70px;
       }
 
 
       .copyright-col{
         margin-left: 100px;
-        @include media-breakpoint-down(sm) {
-          margin-left: 0
+        @include media-breakpoint-down(lg) {
+          margin-left: 0;
         }
       }
 
@@ -52,6 +60,9 @@
       }
       .address-col, .copyright-col {
         display:inline-flex;
+        @include media-breakpoint-only(md) {
+          flex-direction: column;
+         }
       }
 
       .address-col>img {
@@ -60,13 +71,16 @@
           flex-shrink: 0;
           margin-top: 5px;
           margin-right: 15px;
+          @include media-breakpoint-only(md) {
+             margin-bottom: 20px;
+         }
       }
   }
 
   .help-contact-container{
     width:55%;
     margin-top: 30px;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     opacity: 0.6;
 
     @media (min-width: 1024px) {
@@ -94,17 +108,29 @@
     .help-col, .contact-col {
        display: inline-flex;
        margin-right: 30px;
-       @include media-breakpoint-down(md) {
-          margin-right: 0
+
+       img {
+        @include media-breakpoint-only(md) {
+           display:none;
+           margin-left:0;
+         }
        }
+
     }
 
     .info {
       margin-left: 15px;
+      @include media-breakpoint-only(md) {
+        margin-left:0
+      }
     }
     .info>a {
       font-size:16px;
       text-decoration: none;
+      @include media-breakpoint-only(md) {
+        display:block;
+        margin-bottom: 10px;
+      }
     }
 
     img {
@@ -129,7 +155,7 @@
           flex-wrap: wrap;
           margin-top: 30px;
 
-          @media (max-width: 1024px) {
+         @include media-breakpoint-between(md, xl) {
             gap: 10px;
          }
          @include media-breakpoint-down(sm) {
