--- a/frontend/public/scss/top-app-bar.scss
+++ b/frontend/public/scss/top-app-bar.scss
@@ -1,5 +1,6 @@
 // sass-lint:disable mixins-before-declarations
 
+// old design
 header.site-header {
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14);
   background-color: $white;
@@ -19,6 +20,7 @@ header.site-header {
   }
 }
 
+// old design
 .full-screen-menu {
   display: block;
 
@@ -137,6 +139,7 @@ header.site-header {
   }
 }
 
+// old design
 .navbar-brand {
   display: inline-flex;
   align-items: center;
@@ -249,4 +252,173 @@ header.site-header {
       transform: scale(0.15);
     }
   }
+}
+
+// New Design
+header.site-header.new-design {
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14);
+  background-color: $white;
+
+  .navbar.top-navbar {
+    display: flex;
+    justify-content: space-between;
+    padding: 12px 15px;
+
+    @include media-breakpoint-down(md) {
+      position: static;
+      padding: 15px 15px;
+    }
+  }
+
+  .nowrap {
+    flex-wrap: unset;
+  }
+}
+
+.full-screen-top-menu {
+  display: block;
+  font-size: 14px;
+  line-height: 21px;
+
+  @include media-breakpoint-down(md) {
+    display: none;
+  }
+
+  ul {
+    display: flex;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+
+    li {
+      font-weight: 600;
+      padding: 0 0 0 8px;
+
+      a {
+        color: black;
+        text-decoration: none;
+        display: block;
+
+
+        &:hover {
+          color: $primary;
+        }
+
+        &.simple {
+          display: inline-flex;
+          padding: 12px 20px;
+          align-items: flex-start;
+          border-radius: 5px;
+          border: 1px solid var(--BorderGrey, #DFE5EC);
+        }
+
+        &.button {
+          transition: .25s;
+
+          @include media-breakpoint-up(md) {
+            background: $primary;
+            color: white;
+            box-shadow: inset 0 0 2px 0 rgba(255, 255, 255, 0.57);
+
+            &:hover {
+              background: black;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.top-branding {
+  display: inline-flex;
+  align-items: center;
+  padding: 0;
+
+  .mitx-online-link {
+    color: var(--Blue-Dark, #03152D);
+    font-size: 18px;
+    font-weight: 700;
+    text-decoration: none;
+
+    @include media-breakpoint-down(md) {
+      font-size: 14px;
+      line-height: 18px;
+    }
+  }
+
+  .logo-link {
+    @include media-breakpoint-down(md) {
+      display: inline-flex;
+    }
+  }
+
+  .divider-grey {
+    width: 1px;
+    height: 23px;
+    margin: 0 15px;
+    opacity: 0.3;
+    background: #888C8D;
+    @include media-breakpoint-down(md) {
+      height: 23px;
+      margin: 0 10px;
+    }
+  }
+}
+
+.mobile-auth-buttons {
+  display: none;
+
+  @include media-breakpoint-down(md) {
+    display: block;
+  }
+
+  ul {
+    display: flex;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+
+    li {
+      font-size: 12px;
+      font-weight: 600;
+      padding: 0 0 0 8px;
+
+      a {
+        color: black;
+        text-decoration: none;
+        display: block;
+        border: 1px solid var(--BorderGrey, #DFE5EC);
+
+
+        &:hover {
+          color: $primary;
+        }
+
+        &.simple {
+          display: inline-flex;
+          padding: 8px 15px;
+          align-items: flex-start;
+          border-radius: 3px;
+        }
+
+        &.button {
+          transition: .25s;
+          background: #a31f34;
+          color: white;
+
+          @include media-breakpoint-up(md) {
+            background: $primary;
+            color: white;
+            box-shadow: inset 0 0 2px 0 rgba(255, 255, 255, 0.57);
+
+            &:hover {
+              background: black;
+            }
+          }
+        }
+      }
+    }
+  }
+
 }
