Updating video player CSS to work better in the new design
.. by making it actually exist there. Also includes some sizing tweaks for the new sidecard layout (especially for HLS videos).

--- a/frontend/public/scss/product-page/product-details.scss
+++ b/frontend/public/scss/product-page/product-details.scss
@@ -90,10 +90,56 @@ body.new-design {
 
       .hero-media {
         margin: 7px 15px;
+        max-width: 350px;
 
         img {
           border-radius: 5px;
           max-width: 350px;
+        }
+
+        .vjs-default-skin {
+          width: 325px;
+          max-height: 240px;
+        }
+
+        .video-js {
+          .vjs-big-play-button {
+            background: black;
+            opacity: 0.8;
+            width: 64px;
+            height: 64px;
+            border: none;
+            border-radius: 50%;
+    
+            &:hover {
+              opacity: 0.6;
+            }
+          }
+    
+          .vjs-poster {
+            height: fit-content;
+          }
+        }
+    
+        .video-js .vjs-big-play-button .vjs-icon-placeholder:before {
+          top: 0.3em;
+        }
+    
+        .vjs-youtube {
+    
+          .vjs-big-play-button {
+            display: none;
+          }
+        }
+    
+        .video-holder {
+          background: $sirocco;
+          margin-top: 10px;
+    
+          img {
+            display: block;
+            width: 100%;
+          }
         }
       }
 
