Use site name for title on index page template

--- a/main/templates/index.html
+++ b/main/templates/index.html
@@ -3,7 +3,7 @@
 {% load render_bundle from webpack_loader %}
 
 {% block headercontent %} {% endblock %}
-{% block title %}{% trans "mitxonline" %}{% endblock %}
+{% block title %}{{ site_name }}{% endblock %}
 
 {% block content %}
   <div id="container"></div>
