--- a/frontend/public/scss/home-page/featured-product-cards.scss
+++ b/frontend/public/scss/home-page/featured-product-cards.scss
@@ -2,21 +2,28 @@
 .featured-product-section-container {
   width: 100%;
   max-width: unset;
-  height: 520px;
+  height: 32.5rem;
   padding: 0 !important;
-  display: flex;
   justify-content: center;
   margin: 0;
   overflow: hidden;
-  .featured-product-background-section {
-    width: 100%;
-       height: 100%;
-  }&:before {
-    background: $home-page-grey-lite;
-    content: ' ';
-    position: absolute;
+  position: relative;
+  z-index:9;
+  &:after {
+    bottom: 0;
+    -webkit-transform: skewY(-1.5deg);
+    transform: skewY(-1.5deg);
+    -webkit-transform-origin: 0 100%;
+    transform-origin: 0 100%;
+    height: 32.5rem;
+    background: inherit;
+    content: '';
+    display: block;
     top: 0;
     left: 0;
+    right: 0;
+    z-index: -1;
+    background-color: $home-page-grey-lite;
   }
 
   h1, h2, h3, h4, h5, h6 {
@@ -33,29 +40,25 @@
   }
 
   .featured-product-section {
-    display: flex;
-    width: 100%;
+    width: calc(100% - 100px);
     max-width: 1320px;
-    height: 520px;
     flex-shrink: 0;
     flex-direction: column;
     align-self: center;
     align-items: center;
+    position: absolute;
     @include media-breakpoint-down(sm) {
       width: 100%;
       height: 450px;
-      background-image: unset;
       background-color: $home-page-grey-lite;
     }
 
     .featured-product-header {
       max-width: 1320px;
       width: 100%;
-      padding: 60px 0 0 0;
+      padding: 3rem 0 1.8rem 0;
       flex-shrink: 0;
       fill: $home-page-grey-lite;
-      display: flex;
-      align-content: space-between;
       @include media-breakpoint-down(sm) {
         width: 100%;
         padding-top: 0;
@@ -65,6 +68,7 @@
         color: $home-page-header-blue;
         font-size: 25px;
         padding-left: 0;
+        margin-bottom: 0;
         @include media-breakpoint-down(sm) {
           width: 176px;
           font-size: 18px;
@@ -106,7 +110,7 @@
 
     .featured-product-listing {
       display: flex;
-      margin: 40px 0 0 0;
+      margin: 36px 0 0 0;
       max-width: 1320px;
       width: 100%;
       height: 238px;
@@ -130,62 +134,97 @@
           width: 110%;
           max-width: unset;
           gap: 20px;
-          .featured-product-card {
-            border-radius: 5px;
-            background: white;
-            box-shadow: 0 2px 3px 0 rgba(18, 38, 49, 0.15);
-            @include media-breakpoint-down(sm) {
-              width: 282px;
-              margin: auto;
-              height: 238px;
-            }
+          padding-bottom: 2rem;
+          transition: transform 0.6s linear;
 
-            a {
-              text-decoration: none;
+          a {
+            text-decoration: none;
+            width: 17.625rem;
+            padding-left: inherit;
+            padding-right: inherit;
+            .featured-product-card {
+              border-radius: 5px;
+              flex-direction: column;
+              align-items: center;
+              border: 1px solid $home-page-grey-lite;
+              background: #FFF;
+              padding: 0;
+              flex: none;
+              box-shadow: 0 2px 3px 0 rgba(18, 38, 49, 0.15);
+              @include media-breakpoint-down(sm) {
+                width: 282px;
+                margin: auto;
+                height: 238px;
+              }
 
               .featured-product-thumb {
+                display: flex;
                 position: relative;
+                justify-content: center;
+                border-radius: 5px;
+                width: 100%;
+                height: 10.6875rem;
+              }
 
-                img {
-                  width: 100%;
-                  border-radius: 5px 5px 0 0;
-                  overflow: hidden;
-                }
-
-                .badge-program-type {
-                  position: absolute;
-                  left: 0;
-                  bottom: 0;
-                  padding: 8px 15px;
-                  border-radius: 0 3px 3px 0;
-                  background-color: $home-page-header-blue;
-                  color: #FFF;
-                  font-family: Inter, sans-serif;
-                  font-size: 0.75rem;
-                  font-style: normal;
-                  font-weight: 700;
-                  line-height: normal;
-                }
+              img {
+                width: 100%;
+                height: 10.6875rem;
+                border-radius: 5px 5px 0 0;
+                background: rgba(0, 0, 0, 0.20);
+                object-position: center;
+                object-fit: cover;
+              }
+              .badge-program-type {
+                display: inline-flex;
+                padding: 8px 15px;
+                align-items: flex-start;
+                border-radius: 0px 3px 0px 0px;
+                background: $home-page-header-blue;
+                position: absolute;
+                left: 0;
+                bottom: 0;
+                color: #FFF;
+                font-size: 0.75rem;
+                font-weight: 700;
+                font-family: Inter, sans-serif;
+              }
+              .badge-program-type-none {
+                background: transparent;
               }
 
               .featured-product-info {
-                margin: 13px 15px 15px 15px;
-                padding: 0;
+                padding: 15px;
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                gap: .31rem;
+                align-self: stretch;
 
                 p.date {
                   color: $home-page-grey-text;
                   font-size: 12px;
                   margin-bottom: 5px;
+                  overflow: hidden;
+                  align-self: stretch;
+                  text-overflow: ellipsis;
+                  font-weight: 400;
                 }
 
                 h2.featured-product-card-title {
                   height: 33px;
-                  flex-shrink: 0;
                   align-self: stretch;
                   color: $home-page-header-blue;
                   font-size: 0.875rem;
                   font-family: Inter, sans-serif;
                   margin-top: 0;
+                  display: -webkit-box;
+                  -webkit-line-clamp: 2;
+                  -webkit-box-orient: vertical;
+                  overflow: hidden;
+                  line-height: 18px;
+                }
+                h2.featured-product-card-title.program-title {
+                  height: 57.953px;
                 }
               }
             }
