--- a/main/templates/partials/featured_product_card.html
+++ b/main/templates/partials/featured_product_card.html
@@ -1,26 +1,25 @@
 {% load static wagtail_img_src feature_img_src %}
 
-<div class="card featured-product-card">
-  <a href="{{ product.url_path }}" class="featured-product-card-link">
-  <div class="featured-product-thumb">
-    <img src="{% feature_img_src product.feature_image %}" alt="" />
-    {% if product.program_type %}
-      <span class="badge badge-program-type">{{ product.program_type }}</span>
-    {% endif %}
-  </div>
-  <div class="featured-product-info card-body">
-    {% if product.start_date and not product.is_program %}
+
+<a href="{{ product.url_path }}" class="featured-product-card-link">
+  <div class="col featured-product-card">
+    <div class="featured-product-thumb">
+      <img src="{% feature_img_src product.feature_image %}" alt="" />
+      <div class="badge badge-program-type{% if not product.program_type %}-none{% endif %}">{% if product.program_type %}{{ product.program_type }}{% endif %}</div>
+    </div>
+    <div class="featured-product-info">
+      {% if product.start_date and not product.is_program %}
       <p class="date">
         Starts {{ product.start_date | date:"F j, Y" }}
       </p>
-    {% elif not product.is_program %}
-      <p class="date">
-        Start Anytime
-      </p>
-    {% endif %}
-    <h2 class="featured-product-card-title card-title">
-        {{ product.title }}
-    </h2>
-  </div>
+      {% elif not product.is_program %}
+        <p class="date">
+          Start Anytime
+        </p>
+      {% endif %}
+      <h2 class="featured-product-card-title card-title{% if product.is_program %} program-title{% endif %}">
+          {{ product.title }}
+      </h2>
+    </div>
+    </div>
   </a>
-</div>
