smaller screen fixes

--- a/cms/templates/home_page.html
+++ b/cms/templates/home_page.html
@@ -46,29 +46,21 @@
     <div class="featured-product-section d-flex row carousel slide" id="featuredProductCarousel">
       <div class="featured-product-header d-flex row col-12">
         {% if product_cards_section_title %}
-          <h3 class="featured-product-header-title col-6">{{ product_cards_section_title }}</h3>
+          <h3 class="featured-product-header-title col-8">{{ product_cards_section_title }}</h3>
         {% endif %}
-        <div class="featured-product-arrows col-6">
-          <a href="#featuredProductCarousel" role="button" data-bs-slide="prev">
+        <div class="featured-product-arrows col-4">
+          <a href="#featuredProductCarousel" class="prev" data-bs-slide="prev" onclick="handleNavigationClick('prev');">
             <img class="arrow prev-arrow" src="/static/images/featured-products-left-arrow.svg" alt="Previous Arrow" />
           </a>
-          <a href="#featuredProductCarousel" role="button" data-bs-slide="next">
+          <a href="#featuredProductCarousel" class="next" data-bs-slide="next" onclick="handleNavigationClick('next');">
             <img class="arrow next-arrow" src="/static/images/featured-products-right-arrow.svg" alt="Next Arrow" />
           </a>
         </div>
       </div>
       <div class="featured-product-listing">
         <div class="carousel-inner d-flex" role="listbox">
-          <div class="carousel-item active">
             {% for product in products %}
-              {% include "partials/featured_product_card.html" with product=product %}
-              {% if forloop.last %}
-                </div>
-              {% elif forloop.counter|divisibleby:5  %}
-                </div>
-                <div class="carousel-item">
-                  {% include "partials/featured_product_card.html" with product=product %}
-              {% endif %}
+              {% include "partials/featured_product_card.html" with product=product order=forloop.counter %}
             {% endfor %}
           </div>
       </div>
@@ -134,7 +126,6 @@
         </div>
       </div>
   </div>
-</div>
 {% endif %}
 {% if show_home_page_contact_form %}
   <div class="home-page-contact-row">
@@ -211,6 +202,45 @@
 {% endblock %}
 {% block scripts %}
 <script>
+
+    let scrollPosition = 0;
+    let numberOfCards = 4;
+
+    function updatePosition () {
+        position = 0;
+    }
+
+  function handleNavigationClick(e) {
+      let carouselWidth = $(".carousel-inner")[0].scrollWidth;
+      let cardWidth = ($(".carousel-item").width() + 20);
+      if (window.matchMedia("(max-width: 1199.98px)").matches) {
+        numberOfCards = 3;
+      }
+      else if (window.matchMedia("(max-width: 991.98px)").matches) {
+        numberOfCards = 2;
+      }
+      else if (window.matchMedia("(max-width: 767.98px)").matches) {
+        numberOfCards = 1;
+      }
+      if (e==="next") {
+          if (scrollPosition < carouselWidth - (cardWidth * numberOfCards)) {
+            scrollPosition += cardWidth * numberOfCards;
+            $(".carousel-inner").animate(
+              { scrollLeft: scrollPosition },
+              600
+            );
+          }
+      } else if (e==="prev") {
+          if (scrollPosition > 0) {
+            scrollPosition -= cardWidth * numberOfCards;
+            $(".carousel-inner").animate(
+              { scrollLeft: scrollPosition },
+              600
+            );
+          }
+        }
+      }
+  window.addEventListener("resize", updatePosition);
 
 </script>
 {% endblock %}
