--- a/frontend/public/scss/home-page/home-page-video-component.scss
+++ b/frontend/public/scss/home-page/home-page-video-component.scss
@@ -1,5 +1,4 @@
 .home-page-video-row {
-  width: 100%;
   max-width: 100%;
   margin: 0;
   padding: 0;
@@ -35,7 +34,7 @@
       margin-top: 2rem;
     }
     @include media-breakpoint-down(md) {
-      padding: 0 15px 0 15px;
+      padding: 0 2.44rem 0 2.44rem;
       margin-top: 1rem;
     }
 
@@ -75,7 +74,6 @@
       padding: 0;
       .home-page-video-player {
         width: 100%;
-        display: flex;
         justify-content: center;
 
         @include media-breakpoint-only(xl) {
