Some more fixes for the More Dates code
- Adds a filter to `get_user_relevant_course_run_qset` to only consider Live courses (this can be moved to the CoursePage model too)
- Fixes the onclick handler for More Dates to only work on buttons - you could technically activate it on the disabled <p> tags too and then enroll in something you shouldn't
- Updates date selector to find the first unenrolled courserun if there's not one explicitly selected, rather than just the first in the list

--- a/cms/templates/product_page.html
+++ b/cms/templates/product_page.html
@@ -222,13 +222,15 @@
                         <p>Click below to enroll in one of these dates</p>
                       </div>
                       {% for course_run in course_runs %}
-                          <div>
-                            {% if course_run.is_not_beyond_enrollment %}
-                              <button class='date-link' id='{{ course_run.courseware_id }}' >Start Date {{ course_run.start_date|date:'F j, Y' }}</button>
-                            {% else %}
-                              <p class='date-link-disabled' id='{{ course_run.courseware_id }}' >{{ course_run.start_date|date:'F j, Y' }}(enrollment opens {{ course_run.enrollment_start|date:'F j, Y' }})</p>
+                        <div>
+                          {% if course_run.is_not_beyond_enrollment %}
+                            <button class='date-link' id='{{ course_run.courseware_id }}' >Start Date {{ course_run.start_date|date:'F j, Y' }}</button>
+                          {% else %}
+                            {% if not course_run.is_past %}
+                            <p class='date-link-disabled' id='{{ course_run.courseware_id }}' >{{ course_run.start_date|date:'F j, Y' }}(enrollment opens {{ course_run.enrollment_start|date:'F j, Y' }})</p>
                             {% endif %}
-                          </div>
+                          {% endif %}
+                        </div>
                       {% endfor %}
                     ">
                     More Dates
